fix overflow problem on large data grids

--- a/src/web/Fig.Web/wwwroot/css/app.css
+++ b/src/web/Fig.Web/wwwroot/css/app.css
@@ -78,7 +78,6 @@ a, .btn-link {
     overflow:hidden;
     transition:max-height 0.5s ease-out;
     height:auto;
-    max-height: 1000px;
 }
 
 .transition-visible.transition-collapsed {
